--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^1.35.4",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
